force-app/main/default/objects/MBExpenseItem__c/MBExpenseItem__c.object-meta.xml
<CustomObject>
    <label>MBExpenseItem</label>
    <nameField>
        <displayFormat>MBEI-{00000}</displayFormat>
        <label>MBExpenseItem</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MBExpenseItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>