force-app/main/default/objects/MBExpenseItem__c/fields/Expense_Item_Date__c.field-meta.xml
<CustomField>
    <fullName>Expense_Item_Date__c</fullName>
    <label>Expense Item Date</label>
    <type>Date</type>
</CustomField>