force-app/main/default/objects/MBExpenseItem__c/fields/Expense_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Expense_Item_Type__c</fullName>
    <label>Expense Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accomodation</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Meals</fullName>
            </value>
            <value>
                <fullName>Office Supplies</fullName>
            </value>
            <value>
                <fullName>Subscriptions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>