force-app/main/default/objects/MBExpenseItem__c/fields/MBExpense__c.field-meta.xml
<CustomField>
    <fullName>MBExpense__c</fullName>
    <label>MBExpense</label>
    <referenceTo>MBExpense__c</referenceTo>
    <relationshipLabel>MBExpenseItems</relationshipLabel>
    <relationshipName>MBExpenseItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>