force-app/main/default/objects/MBExpenseItem__c/fields/Personal_Expense__c.field-meta.xml
<CustomField>
    <fullName>Personal_Expense__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personal Expense</label>
    <type>Checkbox</type>
</CustomField>