force-app/main/default/objects/MBExpenseItem__c/validationRules/Expense_Date_Checker.validationRule-meta.xml
<ValidationRule>
    <fullName>Expense_Date_Checker</fullName>
    <active>true</active>
    <errorConditionFormula>Expense_Item_Date__c &gt;  MBExpense__r.Expense_Date__c  ||  Expense_Item_Date__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>Expenses can&apos;t be in the future, or greater than the expense header date</errorMessage>
</ValidationRule>