force-app/main/default/objects/MBExpenseItem__c/validationRules/Personal_Expenses_Justification.validationRule-meta.xml
<ValidationRule>
    <fullName>Personal_Expenses_Justification</fullName>
    <active>true</active>
    <errorConditionFormula>Personal_Expense__c == true &amp;&amp;  Comments__c==&quot;&quot;</errorConditionFormula>
    <errorDisplayField>Comments__c</errorDisplayField>
    <errorMessage>Personal expenses must be accompanied by an explanation</errorMessage>
</ValidationRule>